k8s/nginx-ingress.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress

---

# 部署 nginx-ingress 组件

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: nginx-ingress-controller
  template:
    metadata:
      labels:
        app: nginx-ingress-controller
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      # 使用用户nginx-ingress
      #serviceAccount: nginx-ingress
      serviceAccountName: nginx-ingress
      #hostNetwork: true
      containers:
        - name: nginx-ingress
          image: nginx/nginx-ingress:1.7.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              # nginx监听宿主机端口80
              #hostPort: 80
            - name: https
              containerPort: 443
#              hostPort: 30003
            - name: webhook
              containerPort: 8443
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: true
            runAsUser: 101
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          args:
            - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
            - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
---

# 开放给内部service

apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  type: NodePort
  selector:
    app: nginx-ingress-controller
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---

# ingress 分类

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: app-lb
  labels:
    app: nginx-ingress-controller
  annotations:
    # 标识是默认的ingress class
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: nginx.org/ingress-controller

---

# 流量转发配置

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-name-ingress
  namespace: nginx-ingress
  annotations:
#    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # 使用指定的ingress class
  ingressClassName: app-lb
  rules:
#    - host: ""
    - http:
        paths:
          - path: /ee1service/
            pathType: Prefix
            backend:
              service:
                name: app-name-ee1
                port:
                  number: 9090
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-name-web
                port:
                  number: 80
